Adding JavaDoc comments and removing Dockerfile