@@ -3,6 +3,7 @@ package com.cvmanager.auth.provider.user.pojos;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -12,11 +13,11 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 
+/**
+* OrganizationObject represents a user's organization and role association object from the user_organization postgresql table
+*/
 @JsonSerialize
 public class OrganizationObject {
-    /*
-     * This class is used to represent a user's organization and role association object from the user_organization postgresql table
-     */
 
     private static final Logger log = LoggerFactory.getLogger(OrganizationObject.class);
     private static ObjectMapper objectMapper = new ObjectMapper();
@@ -29,13 +30,13 @@ public class OrganizationObject {
     public static List<OrganizationObject> listFromString(String json) {
         try {
             if (json == null || json.isEmpty()) {
-                return List.of();
+                return Collections.emptyList();
             }
             return objectMapper.readValue(json,
                     objectMapper.getTypeFactory().constructCollectionType(List.class, OrganizationObject.class));
         } catch (JsonProcessingException e) {
             log.error("Error parsing OrganizationObject from JSON: {}", json, e);
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
@@ -65,7 +66,7 @@ public class OrganizationObject {
             return objectMapper.convertValue(org, Map.class);
         } catch (Exception e) {
             log.error("Error converting OrganizationObject to Map", e);
-            return new HashMap<>();
+            return Collections.emptyMap();
         }
     }
 
